# vhong-micrograd

./: README.md  main.py  pyproject.toml  setup.py  study_plan.md  train.py
micrograd/: engine.py  nn.py
test/: test_engine.py  test_nn.py  test_train.py
