[project]
name = "vhong-micrograd"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["micrograd"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "torch>=2.10.0",
]
