[project]
name = "vhong-micrograd"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "matplotlib",
    "numpy>=2.4.3",
    "scikit-learn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["micrograd"]

[tool.pytest.ini_options]
addopts = "-m 'not slow'"
markers = ["slow: marks tests as slow (deselected by default, run with -m slow)"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "torch>=2.10.0",
]
